# Questline-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  messages.md
.github/workflows/: release.yml
packaging/: questline.desktop
scripts/: build_appimage.sh  build_release.sh  build_windows.sh  generate_notification_icons.py  levelup.py  seed_demo.sh
server/: .htaccess  changelog.html  chapter.html  download.html  features.html  identity.html  index.html  install.ps1  install.sh  load_env.php  manual.html  orders.html  schema.sql  screenshots.html  styles.css  what.html  who.html
server/admin/: .htaccess  index.php
server/api/: .htaccess  index.php
server/data/: .htaccess  lore.json  quests.json
src/: lib.rs  main.rs  milestone_templates.rs
src/app/: mod.rs
src/audio/: capture.rs  generator.rs  mod.rs  mpris_player.rs  player.rs  soundscapes.rs  spectrum.rs  spotify.rs  state.rs  streams.rs
src/database/: mod.rs  schema.rs
src/models/: chapter.rs  codex.rs  daily_quest.rs  global_chronicle.rs  journal_entry.rs  mod.rs  note.rs  project.rs  rpg.rs  task.rs  user.rs  xp_event.rs
src/screens/: about.rs  archive.rs  character.rs  dashboard.rs  editor.rs  fellowship.rs  focus.rs  gateway.rs  great_chronicle.rs  intro.rs  legends.rs  library.rs  mod.rs  onboarding.rs  project_workspace.rs  projects.rs  prologue.rs  restore.rs  soundscapes.rs  sync.rs
src/services/: api_client.rs  bonsai.rs  config.rs  identity.rs  logger.rs  mod.rs  (+7 more)
webapp/: IMPLEMENTATION_PLAN_E2EE.md  index.html  package-lock.json  package.json  vite.config.js
(+34 files in other folders)
